--- a/po/ca.po
+++ b/po/ca.po
@@ -2,11 +2,10 @@ msgid ""
 msgstr ""
 "Project-Id-Version: @PACKAGE@\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2024-11-07 08:23+0100\n"
+"POT-Creation-Date: 2024-12-16 09:59+0100\n"
 "PO-Revision-Date: 2024-11-07 13:48+0000\n"
 "Last-Translator: David Medina <medipas@gmail.com>\n"
-"Language-Team: Catalan <https://l10n.opensuse.org/projects/snapper/master/ca/"
-">\n"
+"Language-Team: Catalan <https://l10n.opensuse.org/projects/snapper/master/ca/>\n"
 "Language: ca\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -864,7 +863,8 @@ msgstr "P"
 msgid "PB"
 msgstr "PB"
 
-msgid "Path mismatch between backup-config and config."
+#, fuzzy, c-format
+msgid "Path mismatch between source-path of backup-config and subvolume of snapper config ('%s' vs. '%s')."
 msgstr "No hi ha coincidència de camí entre backup-config i config."
 
 #. TRANSLATORS: symbol for "pebi bytes" (best keep untranslated)
@@ -923,18 +923,12 @@ msgstr "Executa l'ordre i crea les instantànies pre i post."
 #, c-format
 msgid "Running delete failed for %d of %ld backup config."
 msgid_plural "Running delete failed for %d of %ld backup configs."
-msgstr[0] ""
-"L'execució de la supressió ha fallat per a %d d'%ld configuració de còpia de "
-"seguretat."
-msgstr[1] ""
-"L'execució de la supressió ha fallat per a %d de %ld configuracions de còpia "
-"de seguretat."
+msgstr[0] "L'execució de la supressió ha fallat per a %d d'%ld configuració de còpia de seguretat."
+msgstr[1] "L'execució de la supressió ha fallat per a %d de %ld configuracions de còpia de seguretat."
 
 #, c-format
 msgid "Running delete for backup config '%s' failed."
-msgstr ""
-"Ha fallat l'execució de la supressió de la configuració de còpia de "
-"seguretat %s."
+msgstr "Ha fallat l'execució de la supressió de la configuració de còpia de seguretat %s."
 
 #, c-format
 msgid "Running delete for backup config '%s'."
@@ -943,55 +937,36 @@ msgstr "Executant la supressió de la configuració de còpia de seguretat %s."
 #, c-format
 msgid "Running list failed for %d of %ld backup config."
 msgid_plural "Running list failed for %d of %ld backup configs."
-msgstr[0] ""
-"Ha fallat l'execució de la llista per a %d d'%ld configuració de còpia de "
-"seguretat."
-msgstr[1] ""
-"Ha fallat l'execució de la llista per a %d de %ld configuracions de còpia de "
-"seguretat."
+msgstr[0] "Ha fallat l'execució de la llista per a %d d'%ld configuració de còpia de seguretat."
+msgstr[1] "Ha fallat l'execució de la llista per a %d de %ld configuracions de còpia de seguretat."
 
 #, c-format
 msgid "Running transfer and delete failed for %d of %ld backup config."
 msgid_plural "Running transfer and delete failed for %d of %ld backup configs."
-msgstr[0] ""
-"Ha fallat l'execució de la transferència i la supressió per a %d d'%ld "
-"configuració de còpia de seguretat."
-msgstr[1] ""
-"Ha fallat l'execució de la transferència i la supressió per a %d de %ld "
-"configuracions de còpia de seguretat."
+msgstr[0] "Ha fallat l'execució de la transferència i la supressió per a %d d'%ld configuració de còpia de seguretat."
+msgstr[1] "Ha fallat l'execució de la transferència i la supressió per a %d de %ld configuracions de còpia de seguretat."
 
 #, c-format
 msgid "Running transfer and delete for backup config '%s' failed."
-msgstr ""
-"Ha fallat l'execució de la transferència i la supressió de la configuració "
-"de còpia de seguretat %s."
+msgstr "Ha fallat l'execució de la transferència i la supressió de la configuració de còpia de seguretat %s."
 
 #, c-format
 msgid "Running transfer and delete for backup config '%s'."
-msgstr ""
-"Executant la transferència i la supressió de la configuració de còpia de "
-"seguretat %s."
+msgstr "Executant la transferència i la supressió de la configuració de còpia de seguretat %s."
 
 #, c-format
 msgid "Running transfer failed for %d of %ld backup config."
 msgid_plural "Running transfer failed for %d of %ld backup configs."
-msgstr[0] ""
-"Ha fallat l'execució de la transferència per a %d d'%ld configuració de "
-"còpia de seguretat."
-msgstr[1] ""
-"Ha fallat l'execució de la transferència per a %d de %ld configuracions de "
-"còpia de seguretat."
+msgstr[0] "Ha fallat l'execució de la transferència per a %d d'%ld configuració de còpia de seguretat."
+msgstr[1] "Ha fallat l'execució de la transferència per a %d de %ld configuracions de còpia de seguretat."
 
 #, c-format
 msgid "Running transfer for backup config '%s' failed."
-msgstr ""
-"Ha fallat l'execució de la transferència per a la configuració de còpia de "
-"seguretat %s."
+msgstr "Ha fallat l'execució de la transferència per a la configuració de còpia de seguretat %s."
 
 #, c-format
 msgid "Running transfer for backup config '%s'."
-msgstr ""
-"Executant la transferència per a la configuració de còpia de seguretat %s."
+msgstr "Executant la transferència per a la configuració de còpia de seguretat %s."
 
 msgid "SSH Host"
 msgstr "Amfitrió SSH"
