--- a/po/fr.po
+++ b/po/fr.po
@@ -3,11 +3,10 @@ msgid ""
 msgstr ""
 "Project-Id-Version: @PACKAGE@\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2024-11-07 08:23+0100\n"
+"POT-Creation-Date: 2024-12-16 09:59+0100\n"
 "PO-Revision-Date: 2024-11-13 12:48+0000\n"
 "Last-Translator: Guillaume GARDET <guillaume.gardet@opensuse.org>\n"
-"Language-Team: French <https://l10n.opensuse.org/projects/snapper/master/fr/>"
-"\n"
+"Language-Team: French <https://l10n.opensuse.org/projects/snapper/master/fr/>\n"
 "Language: fr\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -892,7 +891,8 @@ msgstr "P"
 msgid "PB"
 msgstr "Po"
 
-msgid "Path mismatch between backup-config and config."
+#, fuzzy, c-format
+msgid "Path mismatch between source-path of backup-config and subvolume of snapper config ('%s' vs. '%s')."
 msgstr "Non-concordance des chemins d'accès entre backup-config et config."
 
 #. TRANSLATORS: symbol for "pebi bytes" (best keep untranslated)
@@ -922,12 +922,10 @@ msgid "Print version and exit."
 msgstr "Imprime la version et ferme le programme."
 
 msgid "Probing extra information for source snapshots."
-msgstr ""
-"Recherche d'informations supplémentaires pour les instantanés de source."
+msgstr "Recherche d'informations supplémentaires pour les instantanés de source."
 
 msgid "Probing extra information for target snapshots."
-msgstr ""
-"Recherche d'informations supplémentaires pour les instantanés de destination."
+msgstr "Recherche d'informations supplémentaires pour les instantanés de destination."
 
 #, fuzzy
 msgid "Probing source snapshots."
@@ -955,18 +953,12 @@ msgstr "Exécute la commande et crée les instantanés préalables et postérieu
 #, c-format
 msgid "Running delete failed for %d of %ld backup config."
 msgid_plural "Running delete failed for %d of %ld backup configs."
-msgstr[0] ""
-"L'exécution de la suppression a échoué pour %d de %ld configuration de "
-"sauvegarde."
-msgstr[1] ""
-"L'exécution de la suppression a échoué pour %d de %ld configurations de "
-"sauvegarde."
+msgstr[0] "L'exécution de la suppression a échoué pour %d de %ld configuration de sauvegarde."
+msgstr[1] "L'exécution de la suppression a échoué pour %d de %ld configurations de sauvegarde."
 
 #, c-format
 msgid "Running delete for backup config '%s' failed."
-msgstr ""
-"L'exécution de la suppression de la configuration de sauvegarde '%s' a "
-"échoué."
+msgstr "L'exécution de la suppression de la configuration de sauvegarde '%s' a échoué."
 
 #, c-format
 msgid "Running delete for backup config '%s'."
@@ -975,47 +967,32 @@ msgstr "Exécution de la suppression de la configuration de sauvegarde '%s'."
 #, c-format
 msgid "Running list failed for %d of %ld backup config."
 msgid_plural "Running list failed for %d of %ld backup configs."
-msgstr[0] ""
-"L'exécution de la liste a échoué pour %d de %ld configuration de sauvegarde."
-msgstr[1] ""
-"L'exécution de la liste a échoué pour %d de %ld configurations de sauvegarde."
+msgstr[0] "L'exécution de la liste a échoué pour %d de %ld configuration de sauvegarde."
+msgstr[1] "L'exécution de la liste a échoué pour %d de %ld configurations de sauvegarde."
 
 #, c-format
 msgid "Running transfer and delete failed for %d of %ld backup config."
 msgid_plural "Running transfer and delete failed for %d of %ld backup configs."
-msgstr[0] ""
-"L'exécution du transfert et de la suppression a échoué pour %d de %ld "
-"configuration de sauvegarde."
-msgstr[1] ""
-"L'exécution du transfert et de la suppression a échoué pour %d de %ld "
-"cconfigurations de sauvegarde."
+msgstr[0] "L'exécution du transfert et de la suppression a échoué pour %d de %ld configuration de sauvegarde."
+msgstr[1] "L'exécution du transfert et de la suppression a échoué pour %d de %ld cconfigurations de sauvegarde."
 
 #, c-format
 msgid "Running transfer and delete for backup config '%s' failed."
-msgstr ""
-"L'exécution du transfert et de la suppression de la configuration de "
-"sauvegarde '%s' a échoué."
+msgstr "L'exécution du transfert et de la suppression de la configuration de sauvegarde '%s' a échoué."
 
 #, c-format
 msgid "Running transfer and delete for backup config '%s'."
-msgstr ""
-"Exécution du transfert et de la suppression pour la configuration de "
-"sauvegarde '%s'."
+msgstr "Exécution du transfert et de la suppression pour la configuration de sauvegarde '%s'."
 
 #, c-format
 msgid "Running transfer failed for %d of %ld backup config."
 msgid_plural "Running transfer failed for %d of %ld backup configs."
-msgstr[0] ""
-"Échec du transfert en cours d'exécution pour %d de %ld configuration de "
-"sauvegarde."
-msgstr[1] ""
-"Échec du transfert en cours d'exécution pour %d de %ld configurations de "
-"sauvegarde."
+msgstr[0] "Échec du transfert en cours d'exécution pour %d de %ld configuration de sauvegarde."
+msgstr[1] "Échec du transfert en cours d'exécution pour %d de %ld configurations de sauvegarde."
 
 #, c-format
 msgid "Running transfer for backup config '%s' failed."
-msgstr ""
-"L'exécution du transfert de la configuration de sauvegarde '%s' a échoué."
+msgstr "L'exécution du transfert de la configuration de sauvegarde '%s' a échoué."
 
 #, c-format
 msgid "Running transfer for backup config '%s'."
@@ -1301,8 +1278,7 @@ msgid "usage: snapper [--global-options] <command> [--command-options] [command-
 msgstr "Utilisation : snapper [--options-globales] <commande> [--options-de-commande] [arguments-de-commande]"
 
 msgid "usage: snbk [--global-options] <command> [command-arguments]"
-msgstr ""
-"Utilisation : snbk [--global-options] <commande> [arguments-de-commande]"
+msgstr "Utilisation : snbk [--global-options] <commande> [arguments-de-commande]"
 
 msgid "yes"
 msgstr "oui"
