--- a/dists/debian/changelog
+++ b/dists/debian/changelog
@@ -1,3 +1,9 @@
+snapper (0.12.1) stable; urgency=low
+
+  * Updated to version 0.12.1
+
+ -- Arvin Schnell <aschnell@suse.com>  Fri, 10 Jan 2025 12:16:10 +0000
+
 snapper (0.12.0) stable; urgency=low
 
   * Updated to version 0.12.0
