--- a/po/sl.po
+++ b/po/sl.po
@@ -8,17 +8,15 @@ msgid ""
 msgstr ""
 "Project-Id-Version: @PACKAGE@\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2024-12-16 09:59+0100\n"
+"POT-Creation-Date: 2025-04-25 11:00+0200\n"
 "PO-Revision-Date: 2024-12-16 13:48+0000\n"
 "Last-Translator: Jure Repinc <jlp@holodeck1.com>\n"
-"Language-Team: Slovenian <https://l10n.opensuse.org/projects/snapper/master/"
-"sl/>\n"
+"Language-Team: Slovenian <https://l10n.opensuse.org/projects/snapper/master/sl/>\n"
 "Language: sl\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=4; plural=n%100==1 ? 0 : n%100==2 ? 1 : n%100==3 || "
-"n%100==4 ? 2 : 3;\n"
+"Plural-Forms: nplurals=4; plural=n%100==1 ? 0 : n%100==2 ? 1 : n%100==3 || n%100==4 ? 2 : 3;\n"
 "X-Generator: Weblate 5.8.4\n"
 
 msgid "\tsnapper cleanup <cleanup-algorithm>"
@@ -889,9 +887,7 @@ msgstr "PB"
 
 #, c-format
 msgid "Path mismatch between source-path of backup-config and subvolume of snapper config ('%s' vs. '%s')."
-msgstr ""
-"Neujemanje poti med »source-path« v »backup-config« in podnosilcem v "
-"nastavitvah za snapper (»%s« in »%s«)."
+msgstr "Neujemanje poti med »source-path« v »backup-config« in podnosilcem v nastavitvah za snapper (»%s« in »%s«)."
 
 #. TRANSLATORS: symbol for "pebi bytes" (best keep untranslated)
 msgid "PiB"
@@ -950,23 +946,14 @@ msgstr "Zažene ukaz in ustvari posnetka pred in po."
 #, c-format
 msgid "Running delete failed for %d of %ld backup config."
 msgid_plural "Running delete failed for %d of %ld backup configs."
-msgstr[0] ""
-"Izvajanje brisanja je spodletelo za %d od %ld nastavitve varnostnega "
-"kopiranja."
-msgstr[1] ""
-"Izvajanje brisanja je spodletelo za %d od %ld nastavitev varnostnega "
-"kopiranja."
-msgstr[2] ""
-"Izvajanje brisanja je spodletelo za %d od %ld nastavitev varnostnega "
-"kopiranja."
-msgstr[3] ""
-"Izvajanje brisanja je spodletelo za %d od %ld nastavitev varnostnega "
-"kopiranja."
+msgstr[0] "Izvajanje brisanja je spodletelo za %d od %ld nastavitve varnostnega kopiranja."
+msgstr[1] "Izvajanje brisanja je spodletelo za %d od %ld nastavitev varnostnega kopiranja."
+msgstr[2] "Izvajanje brisanja je spodletelo za %d od %ld nastavitev varnostnega kopiranja."
+msgstr[3] "Izvajanje brisanja je spodletelo za %d od %ld nastavitev varnostnega kopiranja."
 
 #, c-format
 msgid "Running delete for backup config '%s' failed."
-msgstr ""
-"Izvajanje brisanja za nastavitev varnostnega kopiranja »%s« je spodletelo."
+msgstr "Izvajanje brisanja za nastavitev varnostnega kopiranja »%s« je spodletelo."
 
 #, c-format
 msgid "Running delete for backup config '%s'."
@@ -975,40 +962,22 @@ msgstr "Izvajanje brisanja za nastavitev varnostnega kopiranja »%s«."
 #, c-format
 msgid "Running list failed for %d of %ld backup config."
 msgid_plural "Running list failed for %d of %ld backup configs."
-msgstr[0] ""
-"Izvajanje izpisovanja je spodletelo za %d od %ld nastavitve varnostnega "
-"kopiranja."
-msgstr[1] ""
-"Izvajanje izpisovanja je spodletelo za %d od %ld nastavitev varnostnega "
-"kopiranja."
-msgstr[2] ""
-"Izvajanje izpisovanja je spodletelo za %d od %ld nastavitev varnostnega "
-"kopiranja."
-msgstr[3] ""
-"Izvajanje izpisovanja je spodletelo za %d od %ld nastavitev varnostnega "
-"kopiranja."
+msgstr[0] "Izvajanje izpisovanja je spodletelo za %d od %ld nastavitve varnostnega kopiranja."
+msgstr[1] "Izvajanje izpisovanja je spodletelo za %d od %ld nastavitev varnostnega kopiranja."
+msgstr[2] "Izvajanje izpisovanja je spodletelo za %d od %ld nastavitev varnostnega kopiranja."
+msgstr[3] "Izvajanje izpisovanja je spodletelo za %d od %ld nastavitev varnostnega kopiranja."
 
 #, c-format
 msgid "Running transfer and delete failed for %d of %ld backup config."
 msgid_plural "Running transfer and delete failed for %d of %ld backup configs."
-msgstr[0] ""
-"Izvajanje prenosa in brisanja je spodletelo za %d od %ld nastavitve "
-"varnostnega kopiranja."
-msgstr[1] ""
-"Izvajanje prenosa in brisanja je spodletelo za %d od %ld nastavitev "
-"varnostnega kopiranja."
-msgstr[2] ""
-"Izvajanje prenosa in brisanja je spodletelo za %d od %ld nastavitev "
-"varnostnega kopiranja."
-msgstr[3] ""
-"Izvajanje prenosa in brisanja je spodletelo za %d od %ld nastavitev "
-"varnostnega kopiranja."
+msgstr[0] "Izvajanje prenosa in brisanja je spodletelo za %d od %ld nastavitve varnostnega kopiranja."
+msgstr[1] "Izvajanje prenosa in brisanja je spodletelo za %d od %ld nastavitev varnostnega kopiranja."
+msgstr[2] "Izvajanje prenosa in brisanja je spodletelo za %d od %ld nastavitev varnostnega kopiranja."
+msgstr[3] "Izvajanje prenosa in brisanja je spodletelo za %d od %ld nastavitev varnostnega kopiranja."
 
 #, c-format
 msgid "Running transfer and delete for backup config '%s' failed."
-msgstr ""
-"Izvajanje prenosa in brisanja za nastavitve varnostnega kopiranja »%s« je "
-"spodletelo."
+msgstr "Izvajanje prenosa in brisanja za nastavitve varnostnega kopiranja »%s« je spodletelo."
 
 #, c-format
 msgid "Running transfer and delete for backup config '%s'."
@@ -1017,23 +986,14 @@ msgstr "Izvajanje prenosa in brisanja za nastavitve varnostnega kopiranja »%s«
 #, c-format
 msgid "Running transfer failed for %d of %ld backup config."
 msgid_plural "Running transfer failed for %d of %ld backup configs."
-msgstr[0] ""
-"Izvajanje prenosa je spodletelo za %d od %ld nastavitve varnostnega "
-"kopiranja."
-msgstr[1] ""
-"Izvajanje prenosa je spodletelo za %d od %ld nastavitev varnostnega "
-"kopiranja."
-msgstr[2] ""
-"Izvajanje prenosa je spodletelo za %d od %ld nastavitev varnostnega "
-"kopiranja."
-msgstr[3] ""
-"Izvajanje prenosa je spodletelo za %d od %ld nastavitev varnostnega "
-"kopiranja."
+msgstr[0] "Izvajanje prenosa je spodletelo za %d od %ld nastavitve varnostnega kopiranja."
+msgstr[1] "Izvajanje prenosa je spodletelo za %d od %ld nastavitev varnostnega kopiranja."
+msgstr[2] "Izvajanje prenosa je spodletelo za %d od %ld nastavitev varnostnega kopiranja."
+msgstr[3] "Izvajanje prenosa je spodletelo za %d od %ld nastavitev varnostnega kopiranja."
 
 #, c-format
 msgid "Running transfer for backup config '%s' failed."
-msgstr ""
-"Izvajanje prenosa za nastavitve varnostnega kopiranja »%s« je spodletelo."
+msgstr "Izvajanje prenosa za nastavitve varnostnega kopiranja »%s« je spodletelo."
 
 #, c-format
 msgid "Running transfer for backup config '%s'."
@@ -1146,6 +1106,25 @@ msgstr "Ciljna pot"
 
 msgid "Target State"
 msgstr "Ciljno stanje"
+
+msgid "Target btrfs bin"
+msgstr ""
+
+msgid "Target findmnt Bin"
+msgstr ""
+
+msgid "Target mkdir bin"
+msgstr ""
+
+#, fuzzy
+msgid "Target realpath bin"
+msgstr "Ciljna pot"
+
+msgid "Target rm bin"
+msgstr ""
+
+msgid "Target rmdir bin"
+msgstr ""
 
 msgid "The ambit can be specified manually using the --ambit option."
 msgstr "Ambit lahko določite ročno z uporabo možnosti »--ambit«."
