--- a/_posts/2025-04-28-snbk-sudo.md
+++ b/_posts/2025-04-28-snbk-sudo.md
@@ -12,7 +12,7 @@ permissions so far it was required to allow ssh root login on the
 remote backup server. By using sudo from a wrapper script this root
 ssh login can be avoided.
 
-Here we provide an step-by-step guide for a viable setup.
+Here we provide a step-by-step guide for a viable setup.
 
 First we prepare the local system. All commands need to be run as
 root.
@@ -35,6 +35,7 @@ to the backup server:
 [...]
 # cp .ssh/sesame /etc/snapper/certs/
 # scp .ssh/sesame.pub linux@vault.local:/tmp/
+[...]
 ~~~
 
 Create the config for snbk as
@@ -106,7 +107,7 @@ example for such a script:
 The script should not be writable by the backup user.
 
 We are now ready to check the setup. First we transfer the snapshots
-to the backup server:
+to the backup server (commands run on local system):
 
 ~~~
 # snbk --verbose transfer
